<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mystique</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="english">English</string>
    <string name="arabic">عربي</string>
    <string name="franco">Franco</string>
    <string name="play">PLAY</string>
    <string name="challenge">CHALLENGE</string>
    <string name="howtoplay">HOW TO PLAY</string>
    <string name="teams">Teams</string>
    <string name="rounds">Rounds</string>
    <string name="time_of_round">Round time</string>
    <string name="proceed">Continue</string>
    <string name="startGame">Start The Game</string>
    <string name="purchase">Purchase</string>
    <string name="correct">Correct</string>
    <string name="pass">Pass</string>
    <string name="btn_back_txt">BACK</string>
    <string name="btn_play_txt">PLAY</string>
    <string name="the_score">The Score</string>
    <string name="btn_watch_video">WATCH THE VIDEO</string>
    <string name="share">Share</string>
    <string name="place_on_forehead">PLACE THE MOBILE ON YOUR FOREHEAD</string>
    <string name="touch_to_start">OR TOUCH TO PLAY</string>
    <string name="extra_time">Extra Time</string>
    <string name="sound_effects">Sound Effects</string>
    <string name="save">Save</string>
    <string name="final_score">Final Score</string>
    

    <!-- Menu Items -->
    <string name="home">HOME</string>
    <string name="all">ALL</string>
    <string name="adjust">ADJUST</string>
    <string name="favorite">FAVORITES</string>
    <string name="settings">SETTINGS</string>
    
    
    
    <string-array name="sport">
        <item>SPORT</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="places">
        <item>PLACES</item>
        <item>Try to guess the place name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>one,two,three</item>
        <item>purchase</item>
    </string-array>
    <string-array name="nationalities">
        <item>NATIONALITIES</item>
        <item>Try to guess the place name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>one,two,three</item>
        <item>purchase</item>
    </string-array>
    <string-array name="countries">
        <item>COUNTRIES</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="animals">
        <item>ANIMALS</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="arabic_movies">
        <item>ARABIC MOVIES</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="jobs">
        <item>JOBS</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="tv_series">
        <item>TV SERIES</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="celeberities">
        <item>CELEBERITIES</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>purchase</item>
    </string-array>
    <string-array name="english_movies">
        <item>ENGLISH MOVIES</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="singers">
        <item>SINGERS</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="act_it">
        <item>ACT IT</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>purchase</item>
    </string-array>
    <string-array name="cartoon">
        <item>CARTOON</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="feelings">
        <item>FEELINGS</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>free</item>
    </string-array>
    <string-array name="objects">
        <item>OBJECTS</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>purchase</item>
    </string-array>

    <string-array name="food">
        <item>FOOD</item>
        <item>Try to guess the sport name by describing the plot. to make it more difficult don’t use any character names.</item>
        <item>Football,Basketball,Baseball,Hockey,Handball,Karate,Kongfu,Swimming,Volleyball,Bowling,Tennis,Pingpong,Waterpolo,Boxing,Taekwondo,Muay Thai,Judo,Diving,Gymnastics,Bodybuilding,Horse Back Riding</item>
        <item>purchase</item>
    </string-array>
   

</resources>
