<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.otaku.mystique.MainActivity" >

    <!-- android:onClick="setLangArabic" -->


    <!-- android:onClick="setLangEnglish" -->

    <RelativeLayout
        android:id="@+id/relativeLayout1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="21dp"
        android:layout_marginRight="30dp"
        android:layout_marginTop="25dp" >

        <Button
            android:id="@+id/btn_eng"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_marginBottom="20dp"
            android:background="#2CACAB"
            android:text="@string/english"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_franco"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btn_eng"
            android:layout_centerInParent="false"
            android:layout_marginBottom="20dp"
            android:background="#2CACAB"
            android:text="@string/franco"
            android:textColor="#fff" />

        <Button
            android:id="@+id/btn_ar"
            android:layout_width="150dp"
            android:layout_height="45dp"
            android:layout_below="@+id/btn_franco"
            android:layout_centerInParent="false"
            android:background="#2CACAB"
            android:text="@string/arabic"
            android:textColor="#fff" />
    </RelativeLayout>

</RelativeLayout>