<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#ffcc66" >

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true" >

        <RelativeLayout
            android:id="@+id/relativeLayout1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="left" >

            <ImageView
                android:id="@+id/quick_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/quick" />

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/quick_game"
                android:layout_centerHorizontal="true"
                android:layout_marginBottom="20dp"
                android:text="@string/play"
                android:textColor="#fff"
                android:textStyle="bold" />

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/relativeLayout2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toRightOf="@id/relativeLayout1" >

            <ImageView
                android:id="@+id/challenge_game"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/challenge" />

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/challenge_game"
                android:layout_alignParentBottom="false"
                android:layout_centerHorizontal="true"
                android:layout_centerInParent="true"
                android:layout_marginBottom="20dp"
                android:text="@string/challenge"
                android:textColor="#fff"
                android:textStyle="bold" />

        </RelativeLayout>

    </RelativeLayout>

    <Button
        android:id="@+id/btn_howtoplay"
        android:layout_width="150dp"
        android:layout_height="35dp"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginBottom="30dp"
        android:background="#2cacab"
        android:text="@string/howtoplay"
        android:textColor="#fff"
        android:textStyle="bold" />

</RelativeLayout>